<resources>
    <string name="app_name">TimeManager</string>

    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Otc">Otc</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="add_event">add</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="event_type">Event Type</string>
    <string name="work">work</string>
    <string name="family">family</string>
    <string name="holiday">holiday</string>
    <string name="general">general</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="type_your_description_here">Type Your Description Here...</string>
    <string name="untitled">Untitled</string>
    <string name="event_title">Event Title</string>
    <string name="location">location</string>
    <string name="description">Description</string>
    <string name="llocation">Location</string>
    <string name="none">None</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="save">Save</string>
    <string name="my_account">My Account</string>
    <string name="google_accounts">Google Accounts</string>
    <string name="no_account">No Account</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">channel for notification</string>
    <string name="button">Button</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="confirm">Confirm</string>
    <string name="sync_from_google">Sync From Google</string>
    <string name="credit">Credits</string>
    <string name="about">About</string>

</resources>
